Inventory - Fixed badges scroll & alignment badges in infostand

--- a/src/components/room/widgets/avatar-info/AvatarInfoWidgetView.scss
+++ b/src/components/room/widgets/avatar-info/AvatarInfoWidgetView.scss
@@ -157,6 +157,7 @@
         .badge-image {
             width: 45px;
             height: 45px;
+            margin: auto;
         }
 
         .motto-content {
